--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Font Awesome CDN (v6.x) -->
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css" />
+
 
 <!-- ✅ Facebook SDK đặt cuối cùng để tránh lỗi tải chậm -->
 <div id="fb-root"></div>
