--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>MovioPhimWeb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/movio_logo.png">
   <!-- Font Awesome CDN (v6.x) -->
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css" />
 
